[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tests/VectorTests.gd" type="Script" id=1]
[ext_resource path="res://Tests/TestBullet.png" type="Texture" id=2]
[ext_resource path="res://GUI/PonyLabel.tscn" type="PackedScene" id=3]

[node name="VectorTests" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.52063
margin_top = -0.281982
margin_right = -0.52063
margin_bottom = -0.281982
script = ExtResource( 1 )

[node name="a1point" type="Sprite" parent="."]
position = Vector2( 325.445, 266.349 )
texture = ExtResource( 2 )
offset = Vector2( 33.8997, 31.7534 )

[node name="a1center" type="Sprite" parent="."]
visible = false
position = Vector2( 325.445, 266.349 )
scale = Vector2( 1.4822, 1.4822 )
texture = ExtResource( 2 )
offset = Vector2( 1.412, 0.0890198 )

[node name="a1center2" type="Sprite" parent="."]
position = Vector2( 355.034, 297.848 )
scale = Vector2( 1.4822, 1.4822 )
texture = ExtResource( 2 )
offset = Vector2( 1.412, 0.0890198 )

[node name="a2point" type="Sprite" parent="."]
position = Vector2( 544.898, 266.43 )
texture = ExtResource( 2 )
offset = Vector2( 33.8997, 31.7534 )

[node name="a2center" type="Sprite" parent="."]
visible = false
position = Vector2( 544.898, 266.43 )
scale = Vector2( 1.4822, 1.4822 )
texture = ExtResource( 2 )
offset = Vector2( 1.412, 0.0890198 )

[node name="a2center2" type="Sprite" parent="."]
position = Vector2( 574.726, 298.405 )
scale = Vector2( 1.4822, 1.4822 )
texture = ExtResource( 2 )
offset = Vector2( 1.412, 0.0890198 )

[node name="Button" type="Button" parent="."]
margin_left = 413.609
margin_top = 366.897
margin_right = 505.609
margin_bottom = 411.897
text = "Sum"

[node name="sum" parent="." instance=ExtResource( 3 )]
margin_left = 827.402
margin_top = 285.874
margin_right = 979.402
margin_bottom = 345.874

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
